--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -72,6 +72,11 @@ code: |
 comment: |
   Notes on this code:
   - It doesn't override any basic questions
+  
+  TODO:
+  - Can multiple plaintifs be on one form for this form? (Currently,
+    that is offered as a possibility)
+  - Same question for other parties (defendants) - multiples allowed?
 ---
 id: interview_order_a_plaintiff_s_motion_to_modify_qc_v20009
 code: |
@@ -118,6 +123,18 @@ subquestion: |
   If you are not the plaintiff or if you are the subject of an Abuse Prevention Order, then
   **do not run this tool**.  Instead, you should **instructions to go here**.
 ---
+question: |
+  What are you asking the Court to do?
+subquestion: |
+  I request that the court:
+fields:
+  - no label: MJFmodify_terminate
+    datatype: radio
+    choices:
+      - modify this Abuse Prevention Order: modify
+      - terminate this Abuse Prevention Order: terminate
+---
+# TODO: If they answer 'I do not understand', can they continue?
 # Display the new abuse order understanding as a question with a single
 # checkbox
 question: |
