fixed #7 names asked in correct order

--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -89,8 +89,12 @@ code: |
   # Custom code
   # Only a plaintiff can fill in this form so we'll hard-code it here
   user_ask_role = 'plaintiff'
-  users[0]
-  other_parties[0]
+  users[0].name.first
+  users.there_is_another = False 
+  users.gathered = True
+  other_parties[0].name.first
+  other_parties.there_is_another = False 
+  other_parties.gathered = True
   order_type
   users[0].statement
   understand_yes
